--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,35 +3,28 @@ version: "3.7"
 
 # This docker-compose file is used to build and test the container
 
-secrets:
-  quote_txt:
-    file: ./src/secrets/quote.txt
-
 services:
-  example:
+  starlink-exporter:
     # Run the container normally
     build:
       # VERSION must be specified on the command line:
       # e.g., --build-arg VERSION=0.0.1
       context: .
       dockerfile: Dockerfile
-    image: cisagov/example
+    image: felddy/starlink-exporter
     init: true
     restart: "no"
-    environment:
-      - ECHO_MESSAGE=Hello World from docker-compose!
+    # We want the container to fail to connect o Dishy during testing
+    command: --address 192.168.100.100:9999
     ports:
-      - target: 8080
-        published: 8080
+      - target: 9817
+        published: 19817  # Deconflict the prot during testing
         protocol: tcp
         mode: host
-    secrets:
-      - source: quote_txt
-        target: quote.txt
 
-  example-version:
+  starlink-exporter-version:
     # Run the container to collect version information
-    image: cisagov/example
+    image: felddy/starlink-exporter
     init: true
     restart: "no"
     command: --version
