--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -226,6 +226,17 @@ jobs:
       - name: Setup tmate debug session
         uses: mxschmitt/action-tmate@v3
         if: github.event.inputs.remote-shell == 'true' || env.RUN_TMATE
+  check-docker-secrets:
+    name: "Check Docker secrets"
+    runs-on: ubuntu-latest
+    steps:
+      - name: check-secrets
+        run: |
+          if [ -z "${{ secrets.DOCKER_USERNAME }}" ] ||
+            [ -z "${{ secrets.DOCKER_PASSWORD }}" ]; then
+            echo "::warning::Set DOCKER_USERNAME and DOCKER_PASSWORD secrets."
+            exit 1
+          fi
   build:
     # Builds a single test image for the native platform.  This image is saved
     # as an artifact and loaded by the test job.
@@ -347,7 +358,7 @@ jobs:
     # triggering event is a pull request.
     name: "Build and push all platforms"
     runs-on: ubuntu-latest
-    needs: [lint, prepare, test]
+    needs: [lint, prepare, test, check-docker-secrets]
     if: github.event_name != 'pull_request'
     steps:
       - name: Login to Docker Hub
