--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,6 +25,7 @@ repos:
         args:
           - --fix=lf
       - id: pretty-format-json
+        exclude: package-lock.json
         args:
           - --autofix
       - id: requirements-txt-fixer
@@ -73,6 +74,9 @@ repos:
     rev: 1.0.5
     hooks:
       - id: shell-lint
+        # SC2039 is retired in 0.7.2 but not 0.7.0.  Local checks will pass
+        # but they will currently fail in GitHub Actions which uses 0.7.0
+        args: [-x, --exclude=SC2039]
 
   # Python hooks
   - repo: https://github.com/PyCQA/bandit
@@ -100,6 +104,8 @@ repos:
       - id: flake8
         additional_dependencies:
           - flake8-docstrings
+        exclude: src/spacex/
+
   - repo: https://github.com/PyCQA/isort
     rev: 5.10.1
     hooks:
@@ -108,6 +114,8 @@ repos:
     rev: v0.950
     hooks:
       - id: mypy
+        exclude: src/spacex/
+
   - repo: https://github.com/asottile/pyupgrade
     rev: v2.32.1
     hooks:
@@ -115,7 +123,7 @@ repos:
 
   # Ansible hooks
   - repo: https://github.com/ansible-community/ansible-lint
-    rev: v6.2.0a0
+    rev: v6.2.0
     hooks:
       - id: ansible-lint
       # files: molecule/default/playbook.yml
@@ -132,10 +140,3 @@ repos:
     rev: v2.1.0
     hooks:
       - id: docker-compose-check
-
-  # Packer hooks
-  - repo: https://github.com/cisagov/pre-commit-packer
-    rev: v0.0.2
-    hooks:
-      - id: packer_validate
-      - id: packer_fmt
